--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" type="text/css" />
-    <title>Document</title>
+    <title>HOME</title>
   </head>
   <body>
     Velkommen
+
+    <ul class="nav_list">
+        <li><a href="index.html"> HOME</li> </a>
+        <li><a href="contact.html"> Kontakt</li> </a>
+        <li><a href="history.html"> History</li> </a>
+        <li><a href="about.html"> About</li></a>
+    </ul>
   </body>
 </html>
