Forsøg med console.log
Forsøg med variabler i console.log

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+
+    <header>
+
+        <script> 
+            var b = Brug dette nummer; 
+            console.log(b); 
+            </script> 
+
+    </header>
     
 <h1>
     For yderligere information, kontakt venligst</h1>
@@ -20,6 +29,11 @@
         <div>Lærke </div>
         <div>Timm </div>
 </ul>
+
+<script> 
+    var a = Nummeret er ikke i brug; 
+    console.log(a); 
+    </script> 
 
 </body>
 </html>
