--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,7 @@
     <header>
 
         <script> 
-            var b = Brug dette nummer; 
-            console.log(b); 
+           alert("Nummeret er ikke i brug"); 
             </script> 
 
     </header>
@@ -30,10 +29,9 @@
         <div>Timm </div>
 </ul>
 
-<script> 
-    var a = Nummeret er ikke i brug; 
-    console.log(a); 
-    </script> 
+    <script> 
+           alert("Nummeret er ikke i brug"); 
+            </script> 
 
 </body>
 </html>
