Forsøg med ændringer

--- a/html/contact.html
+++ b/html/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -23,10 +23,8 @@
     <ul>
         <div>Martin Birkely</div>
         <div>Sabine Hurton</div>
-        <div>Bella Bak</div>
         <div>Johanna Martinez</div>
-        <div>Lærke </div>
-        <div>Timm </div>
+        <div>Timm Olsen</div>
 </ul>
 
     <script> 
