--- a/html/index.html
+++ b/html/index.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
     <title>HOME</title>
   </head>
   <body>
     Velkommen
 
     <ul class="nav_list">
-        <li><a href="index.html"> HOME</li> </a>
-        <li><a href="contact.html"> Kontakt</li> </a>
-        <li><a href="history.html"> History</li> </a>
-        <li><a href="about.html"> About</li></a>
+        <li><a href="html/index.html"> HOME</li> </a>
+        <li><a href="html/contact.html"> Kontakt</li> </a>
+        <li><a href="html/history.html"> History</li> </a>
+        <li><a href="html/about.html"> About</li></a>
+        <li><a href="html/swipe.html"> Swipe </li></a>
     </ul>
   </body>
 </html>
