--- a/html/swipe.html
+++ b/html/swipe.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="styleswipe.css">
+<link rel="stylesheet" href="css/styleswipe.css">
 <script src="js/script.js" defer></script>
 </head>
 
